# proposal-ingest

./: .codespellrc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  cspell.json  pyproject.toml
.github/instructions/: pipeline-phase.instructions.md
.github/workflows/: ci.yml
config/: default_config.yaml  document_type_rules.yaml  knowledge_base_policies.yaml
docs/: 00_success_story_and_scope.md  01_product_requirements.md  02_system_architecture.md  03_metadata_schema.md  04_processing_pipeline.md  05_cli_and_config_spec.md  06_aws_bedrock_setup.md  07_human_review_workflow.md  08_repo_and_dev_tooling.md  09_testing_plan.md  10_implementation_plan.md  11_copilot_agent_prompts.md  12_open_gaps_and_decisions.md  13_phase13_pilot_status.md  14_quality_benchmarks.md
prompts/: bedrock_smoke_test.md  document_metadata_repair.md  document_metadata_system.md  document_metadata_user.md  folder_metadata_system.md  folder_metadata_user.md  pass2_contextual_review_system.md  pass2_contextual_review_user.md  proposal_synthesis_system.md  proposal_synthesis_user.md  question_arbiter_system.md  question_arbiter_user.md
sample_data/: README.md
sample_data/quality_benchmark/: README.md
sample_outputs/: file_inventory_columns.csv  questions_to_answer_template.csv  s3_manifest_example.jsonl
schemas/: document_metadata.schema.json  folder_metadata.schema.json  proposal_metadata.schema.json
src/proposal_ingest/: __init__.py  aggregation.py  analyzer.py  cli.py  (+27 more)
tests/: test_bedrock_client.py  test_clean_set_builder.py  test_cli.py  test_document_processor.py  test_end_to_end_quality.py  test_file_filters.py  test_folder_builder.py  test_json_utils.py  test_metadata_validation.py  test_mock_bedrock.py  test_powerpoint_supersession.py  test_proposal_synthesizer.py  test_question_arbiter.py  test_question_gui.py  test_question_loop.py  test_sample_fixtures.py  test_scanner.py  test_tracker.py  test_two_pass.py
(+18 files in other folders)
